Alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,7 @@
 body {
     overflow-x: hidden;
 }
+
+.container {
+    max-width: 1298px;
+}
